Bug 135212 - Libreoffice (KDE wayland) crashes when selecting text
Summary: Libreoffice (KDE wayland) crashes when selecting text
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All Linux (All)
: medium normal
Assignee: Michael Weghorn
URL:
Whiteboard: target:7.1.0
Keywords: regression
Depends on:
Blocks: KDE, KF5
  Show dependency treegraph
 
Reported: 2020-07-28 02:33 UTC by Nicholas van Oudtshoorn
Modified: 2021-09-13 10:47 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nicholas van Oudtshoorn 2020-07-28 02:33:40 UTC
Description:
Running under kde wayland, in writer, if one selects any text, either with the mouse, or by shift-arrowkey, libreoffice crashes. Recovery information is saved.

Forcing the X11 backend (QT_QPA_PLATFORM=xcb libreofficedev7.1) makes everything work - but it's no longer wayland!

Steps to Reproduce:
1.Open Libreoffice under kde plasma wayland
2.Type some text, and then try to select it

Actual Results:
Libreoffice crashes and saves recovery information

Expected Results:
Text should be highlighted


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.1.0.0.alpha0+
Build ID: <buildversion>
CPU threads: 4; OS: Linux 5.7; UI render: Skia/Vulkan; VCL: kf5
Locale: en-AU (en_AU.UTF-8); UI: en-US
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2020-07-23_16:54:25
Calc: threaded
Comment 1 Julien Nabet 2020-07-28 07:40:00 UTC
Michael: thought you might be interested in this one since it concerns Kde/Wayland
Comment 2 Michael Weghorn 2020-07-28 07:54:59 UTC
(In reply to Julien Nabet from comment #1)
> Michael: thought you might be interested in this one since it concerns
> Kde/Wayland

Thanks. Unfortunately, my Plasma Wayland session on my dev computer is currently non-functional; will probably try again sometime later...
Comment 3 Michael Weghorn 2020-07-31 13:23:04 UTC
Got my Wayland setup working again.

This is a regression from

commit 05d286e0065ff1c10e75827ac4726b5a74747128
Author: Noel Grandin <noel.grandin@collabora.co.uk>
Date:   Tue Jul 7 15:55:05 2020 +0200

    vcl/clipboard: create instances with uno constructors
    
    See tdf#74608 for motivation
    
    Change-Id: I8b50ccb014adeba8fa5084bcb804dfa61fa61159
    Reviewed-on: https://gerrit.libreoffice.org/c/core/+/98265
    Tested-by: Jenkins


Fix pending at https://gerrit.libreoffice.org/c/core/+/99871
Comment 4 Michael Weghorn 2020-07-31 13:25:19 UTC
(Note, this doesn't crash when primary selection is available, e.g. in current KDE Neon devedition, where primary selection has been implemented already.)
Comment 5 Commit Notification 2020-07-31 14:45:56 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/491fa499d6b957b9c8f03fece5ed06d5932e9448

tdf#135212 Don't crash when unable to create clipboard

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 caliskanhkaan 2021-09-13 09:36:32 UTC
I still have this issue with version 7.2.0-2 on Arch Linux KDE Plasma Wayland.
Logs and str's can be found on https://bbs.archlinux.org/viewtopic.php?id=269538
Comment 7 Michael Weghorn 2021-09-13 10:35:00 UTC
(In reply to caliskanhkaan from comment #6)
> I still have this issue with version 7.2.0-2 on Arch Linux KDE Plasma
> Wayland.
> Logs and str's can be found on
> https://bbs.archlinux.org/viewtopic.php?id=269538

That sounds like a completely different issue and STR are also different.

In general, please create a separate bug report in such cases. In this case, this sounds like it may be the problem already reported in bug 143135.