tdf#135212 Don't crash when unable to create clipboard

Gracefully handle the case where the SalInstance returns an
empty Reference when trying to create clipboard.

Primary selection support on Wayland has only recently been
added to the relevant KDE components ([1], [2]), and an empty
Reference would be returned for the qt5/kf5 VCL plugin when
trying to create create a clipboard for primary selection
in a Plasma Wayland session with that functionality not yet being
available.

Regression from commit 05d286e0065ff1c10e75827ac4726b5a74747128
("vcl/clipboard: create instances with uno constructors", 2020-07-07).

[1] https://invent.kde.org/plasma/kwayland-server/-/merge_requests/15
[2] https://invent.kde.org/plasma/kwin/-/merge_requests/27

Change-Id: Ia9016f56b775003b2ffe81a6f3bf44f411ad39a2